lang/examples/variables.modu
let a = "Hello, World!";
let b = 1.5; b = b + 1.0;
let c = true;
let d = c;

print(a);
print(b);
print(c);
print(d);

b -= 0.5;
b /= 2.0;
b *= 3.0;
b %= 2.0;

print(b);

let e = { "test": { "key": 1 } };
e.test.key += 1.5;
e["test"]["key"] *= 2;
e.test2 = 2;
print(e);

dosent_exist = 5;

// Expected Output:
//
// Hello, World!
// 2.5
// true
// true
// 1
// { "test": { "key": 5 } }
// error